[project]
name = "trepogeno"
version = "0.1.0"
description = "Wrapper tool for streamlining lineage calling on bulk sets of user fastq data"
authors = [{name = "Jason Beard", email = "jasonthomasbeard@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas >=1.5",
    
]

[project.scripts]
trepogeno = "nextstrain.trepogeno:main"
